    methods to Universe. Added type and order checking to _Connection
    topologyattrs. (PR #2382)
  * Added radius_cut_q as a method to contacts.Contacts (PR #2458)
  * Added ParmEdParser, ParmEdReader and ParmEdConverter to
    convert between a parmed.Structure and MDAnalysis Universe (PR #2404)
  * Improve the distance search in water bridge analysis with capped_distance (PR #2480)

Changes
  * encore.hes() doesn't accept the details keyword anymore, it always returns
    the relevant details instead, consistently with ces() and dres(), in the
    form of a dictionary (Issue #2465)
  * Removed instant selectors on Universe and Group objects (e.g. AtomGroup.C,
    Segment.r1, Universe.s4AKE).  Use select_atoms instead (Issue #1377)
  * Calling Universe() now raises a TypeError advising you to use Universe.empty.
    Universe.empty() now no longer has n_atoms=0 as default. (Issue #2527)
  * deprecated `start`, `stop`, and `step` keywords have been removed from `__init__` 
    in :class:`AnalysisBase`. These should now be called in :meth:`AnalysisBase.run` 
    (Issue #1463)
  * Standardize `select` keyword by removing `selection`, `atomselection`
    and `ref_select` (Issue #2461, Issue #2530)
  * Removes support for setting `start`/`stop`/`step` trajecotry slicing
    keywords on :class:`HOLEtraj` construction. Also removes undocumented
    support for passing :class:`HOLE` parameters to :meth:`HOLEtraj.run`
    (Issue #2513). 
  * Removes the `nproc` keyword from
    :class:`Waterdynamics.HydrogenBondLifetimes` as the multiprocessing functionality
    did not work in some cases(Issues #2511).
  * Added `min_mass` parameter to `guess_hydrogens` function in `HydrogenBondAnalysis`
    set to 0.9 by default (Issue #2472)
  * Removes `save()` function from contacts, diffusionmap, hole, LinearDensity,
    and rms (Issue #1745).
  * Removes; `save_table()` from :class:`HydrogenBondAnalysis`,
    `save_results()` from :class:`HydrogenBondAutoCorrel`, and