@@ -86,6 +86,7 @@ Enhancements
   * Improve the distance search in water bridge analysis with capped_distance (PR #2480)
 
 Changes
+  * Removed AtomGroup stubs (PR #1070, Issue #2443).
   * encore.hes() doesn't accept the details keyword anymore, it always returns
     the relevant details instead, consistently with ces() and dres(), in the
     form of a dictionary (Issue #2465)
